console_log ported from botris

--- a/index.html
+++ b/index.html
@@ -646,6 +646,12 @@ const buttonTemplate = `
 				return outro_complete;
 			}
 
+			function console_log() {
+				let outptr = module.get_string();
+				let result = copyCStr(module, outptr);
+				console.log(result);
+			}
+
 			// as t nears 0 the screen should get more red
 			function draw_fastly_treatment(t) {
 				// let opacity = 0.6*t + 0.4;
@@ -790,7 +796,7 @@ const buttonTemplate = `
 			}
 
 			// The real loading and running of our wasm starts here
-			let imports = { console_log_int, console_log_double, clear_screen, draw_condition_warning, draw_fastly_treatment, reset_fastly_treatment, draw_name_picker, check_high_score, wait_outro_complete, wait_high_score, draw_player, draw_bullet, draw_player_bullet, draw_particle, draw_hud, draw_line, draw_bounds, draw_intro, handle_game_over, draw_sprite, init_shield, add_shield_state, update_shield, draw_shield, draw_ufo, update_local_score, new_session };
+			let imports = { console_log, console_log_int, console_log_double, clear_screen, draw_condition_warning, draw_fastly_treatment, reset_fastly_treatment, draw_name_picker, check_high_score, wait_outro_complete, wait_high_score, draw_player, draw_bullet, draw_player_bullet, draw_particle, draw_hud, draw_line, draw_bounds, draw_intro, handle_game_over, draw_sprite, init_shield, add_shield_state, update_shield, draw_shield, draw_ufo, update_local_score, new_session };
 			imports.Math_atan = Math.atan;
 			imports.sin = Math.sin;
 			imports.cos = Math.cos;
@@ -837,6 +843,7 @@ const buttonTemplate = `
 			module.dealloc = mod.exports.dealloc;
 			module.dealloc_str = mod.exports.dealloc_str;
 			module.memory = mod.exports.memory;
+			module.get_string = mod.exports.get_string;
 
 			module.init();
 
