leaderboard font size

--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
 			background-color: black;
 			color: green;
 			font-family: courier;
+			font-size: xx-large;
 		}
 
 		#fill {
@@ -1162,17 +1163,6 @@ const buttonTemplate = `
 			function resize() {
 				topbar.width = window.innerWidth;
 				topbar.height = window.innerHeight * 0.05;
-
-				// var scale = get_src_to_screen_fill_scale(res.header_img.width, res.header_img.height, header.clientWidth, header.clientHeight);
-				// console.log("header ", res.header_img.width, res.header_img.height, header.clientWidth, header.clientHeight, scale);
-				// var img = document.createElement("img");
-				// img.src = res.header_img.src;
-				// img.width = res.header_img.width * scale;
-				// img.height = res.header_img.height * scale;
-				// img.alt = res.header_img.alt;
-				
-				// leaderboardglobal_elem.width = window.innerWidth * 0.2;
-				// leaderboardglobal_elem.height = window.innerHeight * 0.9;
 
 				gamearea.width = gamearea.clientWidth;
 				gamearea.height = gamearea.clientHeight;
