header and footer

--- a/index.html
+++ b/index.html
@@ -370,7 +370,7 @@ const buttonTemplate = `
 			res.header_img.src = 'header.png';
 			res.header_img.alt = 'Bot Invaders Header';
 
-			res.footer_img.src = 'header.png';
+			res.footer_img.src = 'footer.png';
 			res.footer_img.alt = 'Bot Invaders Footer';
 
 			// Particle
